#
# Copyright (c) 2011 CESNET
#
# LICENSE TERMS
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met:
# 1. Redistributions of source code must retain the above copyright
#    notice, this list of conditions and the following disclaimer.
# 2. Redistributions in binary form must reproduce the above copyright
#    notice, this list of conditions and the following disclaimer in
#    the documentation and/or other materials provided with the
#    distribution.
# 3. Neither the name of the Company nor the names of its contributors
#    may be used to endorse or promote products derived from this
#    software without specific prior written permission.
#
# ALTERNATIVELY, provided that this notice is retained in full, this
# product may be distributed under the terms of the GNU General Public
# License (GPL) version 2 or later, in which case the provisions
# of the GPL apply INSTEAD OF those given above.
#
# This software is provided ``as is'', and any express or implied
# warranties, including, but not limited to, the implied warranties of
# merchantability and fitness for a particular purpose are disclaimed.
# In no event shall the company or contributors be liable for any
# direct, indirect, incidental, special, exemplary, or consequential
# damages (including, but not limited to, procurement of substitute
# goods or services; loss of use, data, or profits; or business
# interruption) however caused and on any theory of liability, whether
# in contract, strict liability, or tort (including negligence or
# otherwise) arising in any way out of the use of this software, even
# if advised of the possibility of such damage.
#
# $Id$
#

AC_PREREQ([2.65])

PACKAGE_VERSION=`cut -f1 ./VERSION | tr -d '\n'`

# Process this file with autoconf to produce a configure script.
AC_INIT([fbitdump.xml], m4_esyscmd($PACKAGE_VERSION))

AC_SUBST(PACKAGE_VERSION)

# Initialization
CXXFLAGS="-Wall -O2 -std=gnu++0x"
CXX="g++"

AC_LANG(C++)

USERNAME=`git config --get user.name`
USERMAIL=`git config --get user.email`
AC_SUBST(USERNAME)
AC_SUBST(USERMAIL)

CONFIGURE_PWD=`pwd`
AC_SUBST(CONFIGURE_PWD)

# Check for pkg-config.
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
	AC_MSG_ERROR(['pkgconfig' not found.])
fi

# redhat is THE default distribution
DISTRO=redhat 

# Check for current distribution
AC_CHECK_PROG([LSB_RELEASE], [lsb_release], [yes], [no])
if test "x$LSB_RELEASE" = "xyes"; then
	DISTRO_RAW="`lsb_release -i | sed 's/.*ID:\s*\(.*\)/\1/'`"
	if test "$DISTRO_RAW" = "SUSE LINUX"; then
		DISTRO=suse
	fi
fi

# Check if distribution was specified manually
AC_ARG_WITH([distro],
	AC_HELP_STRING([--with-distro=DISTRO],[Compile for specific Linux distribution]),
	DISTRO=$withval,
	AC_MSG_NOTICE([Detected distribution: $DISTRO. Run with --with-distro=DISTRO to override])
)

############################ Check for programs ################################

# Check for architecture, only x86 and x86_64 are supported
if test -z "$target_cpu";
then
	AC_CHECK_PROG([UNAME], [uname], [yes], [no])
	if test "$UNAME" = "no"; then
		AC_MSG_ERROR(["uname not found!"])
	fi
	target_cpu=`uname -m`
fi
AC_MSG_CHECKING([for host architecture])
case $target_cpu in
    i?86 )
	AC_MSG_RESULT($target_cpu)
	;;
    x86_64 )
	libdir='${prefix}/lib64'
	AC_MSG_RESULT($target_cpu)
        ;;
    * )
        AC_MSG_ERROR([unsupported architecture $target_cpu])
        ;;
esac

# Check for doxygen
AC_CHECK_PROG(FLEX, flex, flex)

if test ! -n "$FLEX"; then
	AC_MSG_ERROR([Flex lexical analyzator is missing. Install flex to continue.])
fi

# Check for doxygen
AC_CHECK_PROG(DOXYGEN, doxygen, doxygen)

# Check for xsltproc
AC_CHECK_PROG(XSLTPROC, xsltproc, xsltproc)
# and Docbook stylesheets for manpages
if test -n "$XSLTPROC"; then
	case $DISTRO in
		suse )
			if test -f /usr/share/xml/docbook/stylesheet/nwalsh5/current/manpages/docbook.xsl; then
				XSLTMANSTYLE="/usr/share/xml/docbook/stylesheet/nwalsh5/current/manpages/docbook.xsl"
				XSLTHTMLSTYLE="/usr/share/xml/docbook/stylesheet/nwalsh5/current/html/docbook.xsl"
				XSLTXHTMLSTYLE="/usr/share/xml/docbook/stylesheet/nwalsh5/current/xhtml/docbook.xsl"
				BUILDREQS="$BUILDREQS docbook5-xsl-stylesheets"
			elif test -f /usr/share/xml/docbook/stylesheet/nwalsh/current/manpages/docbook.xsl; then
				XSLTMANSTYLE="/usr/share/xml/docbook/stylesheet/nwalsh/current/manpages/docbook.xsl"
				XSLTHTMLSTYLE="/usr/share/xml/docbook/stylesheet/nwalsh/current/html/docbook.xsl"
				XSLXTMLSTYLE="/usr/share/xml/docbook/stylesheet/nwalsh/current/xhtml/docbook.xsl"
				BUILDREQS="$BUILDREQS docbook-xsl-stylesheets"
			else
				AC_MSG_ERROR(["Docbook XSL stylesheet for man pages not found!"])
			fi
			;;
		redhat )
			if test -f /usr/share/sgml/docbook/xsl-stylesheets/manpages/docbook.xsl; then
				XSLTMANSTYLE="/usr/share/sgml/docbook/xsl-stylesheets/manpages/docbook.xsl"
				XSLTHTMLSTYLE="/usr/share/sgml/docbook/xsl-stylesheets/html/docbook.xsl"
				XSLTXHTMLSTYLE="/usr/share/sgml/docbook/xsl-stylesheets/xhtml/docbook.xsl"
				BUILDREQS="$BUILDREQS docbook-style-xsl"
			else
				AC_MSG_ERROR(["Docbook XSL stylesheet for man pages not found!"])
			fi
			;;
		* )
			AC_MSG_ERROR([Unsupported Linux distribuition])
			;;
	esac

	# and path to CSS for HTML
	# TODO: find some usefull style and use it here
	#MANHTMLCSS="--stringparam html.stylesheet http://linuxmanpages.com/global/main.css"
fi
AC_SUBST(XSLTHTMLSTYLE)
AC_SUBST(XSLTXHTMLSTYLE)
AC_SUBST(XSLTMANSTYLE)
AC_SUBST(MANHTMLCSS)

# Check for standard programs
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

############################ Check for libraries ###############################


### pthread ###
AC_CHECK_LIB([fastbit], [fastbit_init],,
    	AC_MSG_ERROR([Required library fastbit missing]))

### dynamic linker ###
AC_CHECK_LIB([dl], [dlopen],,
        AC_MSG_ERROR([Required library dl missing]))

############################# Check for files ##################################
AC_CHECK_FILE([/etc/protocols],,
	[AC_MSG_ERROR([File /etc/protocols missing.])])

###################### Check for configure parameters ##########################
AC_ARG_ENABLE([debug], 
        AC_HELP_STRING([--enable-debug],[turn on more debugging options]),
        [CXXFLAGS="$CXXFLAGS -Wextra -g -DDEBUG"])

######################### Checks for header files ##############################
AC_CHECK_HEADERS([getopt.h iostream regex.h dirent.h ibis.h string arpa/inet.h \
	cstdlib cstring unistd.h algorithm cstdio vector set map string fstream])

######## Checks for typedefs, structures, and compiler characteristics #########
AC_C_INLINE
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_MODE_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

######################## Checks for library functions ##########################
AC_FUNC_MALLOC
AC_FUNC_MMAP
AC_CHECK_FUNCS([htonl inet_ntop gmtime regcomp getline])

############################### Set output #####################################
AC_SUBST(DISTRO)
AC_SUBST(CONFIGURE_PARAMS)

AC_SUBST(DOXYGEN)
if test -z "$DOXYGEN"; then
	AC_MSG_WARN([Due to missing doxygen you will not able to generate Doxygen documentation.])
fi

AC_SUBST(XSLTPROC)
if test -z "$XSLTPROC"; then
	AC_MSG_WARN([Due to missing xsltproc you will not able to generate MAN pages.])
fi

# generate output
AC_CONFIG_FILES(Makefile)

AC_OUTPUT
